argocd.internet.ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-tls-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    # kubernetes.io/ingress.class: traefik
    # cert-manager.io/issuer: letsencrypt-staging
    # traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: argocd.roelvandegrint.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 443
  # tls:
  #   - secretName: argocd-tls
  #     hosts:
  #       - agrocd.roelvandegrint.com
